; ModuleID = '/home/carl/AnghaBench/linux/security/smack/extr_smackfs.c_load_self_seq_next.c'
source_filename = "/home/carl/AnghaBench/linux/security/smack/extr_smackfs.c_load_self_seq_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.task_smack = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.seq_file*, i8*, i32*)* @load_self_seq_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @load_self_seq_next(%struct.seq_file* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.task_smack*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = call i32 (...) @current_cred()
  %9 = call %struct.task_smack* @smack_cred(i32 %8)
  store %struct.task_smack* %9, %struct.task_smack** %7, align 8
  %10 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load %struct.task_smack*, %struct.task_smack** %7, align 8
  %14 = getelementptr inbounds %struct.task_smack, %struct.task_smack* %13, i32 0, i32 0
  %15 = call i8* @smk_seq_next(%struct.seq_file* %10, i8* %11, i32* %12, i32* %14)
  ret i8* %15
}

declare dso_local %struct.task_smack* @smack_cred(i32) #1

declare dso_local i32 @current_cred(...) #1

declare dso_local i8* @smk_seq_next(%struct.seq_file*, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
